--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    He ha
+  </head>
 
-<head></head>
-
-<body>
-    <div id='root'></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
